--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "npm run copy-wasm && next dev",
+    "build": "npm run copy-wasm && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "copy-wasm": "node scripts/copy-wasm.js",
+    "postinstall": "npm run copy-wasm"
   },
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
     "@types/three": "^0.179.0",
     "dxf-parser": "^1.1.2",
+    "dxf-viewer": "^1.0.43",
     "lucide-react": "^0.537.0",
     "next": "15.4.6",
+    "opencascade.js": "^1.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "three": "^0.179.1"
